# llama-voice-hotkeys

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
scripts/: claude-code-tts-hook.sh  read-selection.sh  setup-tts-integrations.sh  setup_gnome_voice_hotkey.sh  stop-tts.sh  toggle-tts.sh  warmup-tts.sh
src/llama_voice/: __init__.py  audio.py  chunked_stt.py  cli.py  client.py  config.py
tests/: test_config.py
